--- a/Intune Group Assignments/Views/MainPage.xaml
+++ b/Intune Group Assignments/Views/MainPage.xaml
@@ -6,9 +6,12 @@
       mc:Ignorable="d">
 
     <Grid x:Name="ContentArea">
-        <TextBlock Text="{x:Bind ViewModel.DisplayName, Mode=OneWay}"
-                Visibility="{x:Bind ViewModel.WelcomeMessageVisibility, Mode=OneWay}"
-                HorizontalAlignment="Center" VerticalAlignment="Top" Margin="0,20,0,0"/>
+        <StackPanel HorizontalAlignment="Center" VerticalAlignment="Top" Margin="0,20,0,0">
+            <TextBlock Text="Welcome "
+                       Visibility="{x:Bind ViewModel.WelcomeMessageVisibility, Mode=OneWay}"/>
+            <TextBlock Text="{x:Bind ViewModel.DisplayName, Mode=OneWay}"
+                       Visibility="{x:Bind ViewModel.WelcomeMessageVisibility, Mode=OneWay}"/>
+        </StackPanel>
 
         <Button x:Name="ButtonConnect" Content="Connect" 
                 Command="{x:Bind ViewModel.ConnectCommand}" 
