--- a/Intune Group Assignments/Views/ShellPage.xaml
+++ b/Intune Group Assignments/Views/ShellPage.xaml
@@ -48,6 +48,12 @@
                         <FontIcon FontFamily="{StaticResource SymbolThemeFontFamily}" Glyph="&#xE80F;"/>
                     </NavigationViewItem.Icon>
                 </NavigationViewItem>
+                <NavigationViewItemSeparator/>
+                <NavigationViewItem x:Uid="Shell_Settings" helpers:NavigationHelper.NavigateTo="Intune_Group_Assignments.ViewModels.SettingsViewModel">
+                    <NavigationViewItem.Icon>
+                        <FontIcon FontFamily="{StaticResource SymbolThemeFontFamily}" Glyph="&#xE71D;"/>
+                    </NavigationViewItem.Icon>
+                </NavigationViewItem>
             </NavigationView.MenuItems>
             <NavigationView.HeaderTemplate>
                 <DataTemplate>
