--- a/Intune Group Assignments/Views/MainPage.xaml
+++ b/Intune Group Assignments/Views/MainPage.xaml
@@ -6,11 +6,17 @@
       mc:Ignorable="d">
 
     <Grid x:Name="ContentArea">
-        <StackPanel HorizontalAlignment="Center" VerticalAlignment="Top" Margin="0,20,0,0">
+        <StackPanel Orientation="Horizontal" 
+            HorizontalAlignment="Center" 
+            VerticalAlignment="Top" 
+            Margin="0,20,0,0">
             <TextBlock Text="Welcome "
-                       Visibility="{x:Bind ViewModel.WelcomeMessageVisibility, Mode=OneWay}"/>
+               Margin="0,0,8,0"
+               Visibility="{x:Bind ViewModel.WelcomeMessageVisibility, Mode=OneWay}"
+               Style="{StaticResource TitleTextBlockStyle}"/>
             <TextBlock Text="{x:Bind ViewModel.DisplayName, Mode=OneWay}"
-                       Visibility="{x:Bind ViewModel.WelcomeMessageVisibility, Mode=OneWay}"/>
+               Visibility="{x:Bind ViewModel.WelcomeMessageVisibility, Mode=OneWay}"
+               Style="{StaticResource TitleTextBlockStyle}"/>
         </StackPanel>
 
         <Button x:Name="ButtonConnect" Content="Connect" 
