--- a/Intune Group Assignments/Views/AllDataPage.xaml
+++ b/Intune Group Assignments/Views/AllDataPage.xaml
@@ -1,10 +1,15 @@
-﻿<Page x:Class="Intune_Group_Assignments.Views.MainPage"
+﻿<Page x:Class="Intune_Group_Assignments.Views.AllDataPage"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+      xmlns:controls="using:CommunityToolkit.WinUI.UI.Controls"
       mc:Ignorable="d">
 
     <Grid>
+        <controls:DataGrid x:Name="myDataGrid"
+                   AutoGenerateColumns="True"
+                   Height="200">
+        </controls:DataGrid>
     </Grid>
 </Page>
