--- a/Intune Group Assignments/Views/AllDataPage.xaml
+++ b/Intune Group Assignments/Views/AllDataPage.xaml
@@ -42,8 +42,8 @@
                 AutoGenerateColumns="False"
                 CanUserSortColumns="True">
                 <controls:DataGrid.Columns>
-                    <controls:DataGridTextColumn Header="Name" Binding="{Binding Name}" CanUserSort="True" />
-                    <controls:DataGridTextColumn Header="Value" Binding="{Binding Value}" CanUserSort="True" />
+                    <controls:DataGridTextColumn Header="Name" Binding="{Binding Name}" />
+                    <controls:DataGridTextColumn Header="Value" Binding="{Binding Value}" />
                 </controls:DataGrid.Columns>
             </controls:DataGrid>
         </Grid>
