--- a/Intune Group Assignments/Views/AllDataPage.xaml
+++ b/Intune Group Assignments/Views/AllDataPage.xaml
@@ -1,4 +1,4 @@
-﻿<Page x:Class="Intune_Group_Assignments.Views.AllDataPage"
+<Page x:Class="Intune_Group_Assignments.Views.AllDataPage"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -9,14 +9,6 @@
       mc:Ignorable="d">
 
     <Grid>
-        <Grid.RowDefinitions>
-            <RowDefinition Height="Auto"/>
-            <!-- Taille automatique pour la CommandBar -->
-            <RowDefinition Height="*"/>
-            <!-- Reste de l'espace pour le DataGrid -->
-        </Grid.RowDefinitions>
-
-        <!-- CommandBar -->
         <Grid x:Name="CommandBar" Grid.Row="0">
             <CommandBar Background="Transparent" IsOpen="False" DefaultLabelPosition="Right" IsSticky="True">
                 <AppBarButton Icon="Add" Label="Add"/>
@@ -30,20 +22,22 @@
                     </AppBarButton>
                 </CommandBar.SecondaryCommands>
                 <CommandBar.Content>
-                    <TextBox PlaceholderText="Search..." Width="300"/>
+                    <TextBox VerticalAlignment="Center" PlaceholderText="Search..." Width="300"/>
                 </CommandBar.Content>
             </CommandBar>
         </Grid>
 
-        <!-- DataGrid -->
+        <!-- DataGrid setup -->
         <Grid x:Name="DataGrid" Grid.Row="1">
-            <controls:DataGrid 
-                ItemsSource="{Binding SampleTable}"
-                AutoGenerateColumns="False"
-                CanUserSortColumns="True">
+            <controls:DataGrid x:Name="DataGrid"
+                               AutoGenerateColumns="False"
+                               CanUserSortColumns="True"
+                               Sorting="DataGrid_OnSorting"
+                               ItemsSource="{Binding MyCollectionViewSource.View}">
                 <controls:DataGrid.Columns>
-                    <controls:DataGridTextColumn Header="Name" Binding="{Binding Name}" />
-                    <controls:DataGridTextColumn Header="Value" Binding="{Binding Value}" />
+                    <!-- Define your columns here -->
+                    <controls:DataGridTextColumn Header="Name" Binding="{Binding Name}" Tag="Name"/>
+                    <controls:DataGridTextColumn Header="Value" Binding="{Binding Value}" Tag="Value"/>
                 </controls:DataGrid.Columns>
             </controls:DataGrid>
         </Grid>
