--- a/Intune Group Assignments/Views/AllDataPage.xaml
+++ b/Intune Group Assignments/Views/AllDataPage.xaml
@@ -8,7 +8,7 @@
       d:DataContext="{d:DesignInstance Type=viewmodels:AllDataViewModel}"
       mc:Ignorable="d">
 
-    <Grid>
+    <Grid Padding="0,0,0,20">
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto"/>
             <RowDefinition Height="*"/>
