--- a/Intune Deployment Monitor/Views/AllDataPage.xaml
+++ b/Intune Deployment Monitor/Views/AllDataPage.xaml
@@ -56,7 +56,7 @@
                                SelectionChanged="OnDataGridSelectionChanged">
                 <controls:DataGrid.Columns>
                     <controls:DataGridTextColumn Header="ResourceType" Binding="{Binding ResourceType}" />
-                    <controls:DataGridTextColumn Header="Group ID" Binding="{Binding GroupDisplayName}" />
+                    <controls:DataGridTextColumn Header="Group Name" Binding="{Binding GroupDisplayName}" />
                     <controls:DataGridTextColumn Header="Resource Name" Binding="{Binding ResourceName}" />
                     <controls:DataGridTextColumn Header="Deployment Status" Binding="{Binding DeploymentStatus}" />
                     <controls:DataGridTextColumn Header="Include/Exclude" Binding="{Binding IncludeExcludeStatus}" />
