--- a/Intune Deployment Monitor/Views/ShellPage.xaml
+++ b/Intune Deployment Monitor/Views/ShellPage.xaml
@@ -43,12 +43,22 @@
                 TODO: Update item icons by updating FontIcon.Glyph properties.
                 https://docs.microsoft.com/windows/apps/design/style/segoe-fluent-icons-font#icon-list
                 -->
+                <NavigationViewItem x:Uid="Shell_WhatsNew" helpers:NavigationHelper.NavigateTo="Intune_Deployment_Monitor.ViewModels.WhatsNewViewModel">
+                    <NavigationViewItem.Icon>
+                        <FontIcon FontFamily="{StaticResource SymbolThemeFontFamily}" Glyph="&#xE80F;"/>
+                    </NavigationViewItem.Icon>
+                </NavigationViewItem>
+                
+                <NavigationViewItemSeparator/>
+                
                 <NavigationViewItem x:Uid="Shell_Home" helpers:NavigationHelper.NavigateTo="Intune_Deployment_Monitor.ViewModels.HomeViewModel">
                     <NavigationViewItem.Icon>
                         <FontIcon FontFamily="{StaticResource SymbolThemeFontFamily}" Glyph="&#xE80F;"/>
                     </NavigationViewItem.Icon>
                 </NavigationViewItem>
+                
                 <NavigationViewItemSeparator/>
+                
                 <NavigationViewItem x:Uid="Shell_AllData" helpers:NavigationHelper.NavigateTo="Intune_Deployment_Monitor.ViewModels.AllDataViewModel">
                     <NavigationViewItem.Icon>
                         <FontIcon FontFamily="{StaticResource SymbolThemeFontFamily}" Glyph="&#xE71D;"/>
